fix table header menu get hidden if table is too short

--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -26,6 +26,15 @@ body {
   padding-top: 50px;
 }
 
+#instanceTableWrapper {
+  position: absolute;
+  top: 125px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
+}
+
 #instanceTable {
   margin: 0;
   padding: 0;
